# sdk

./: Cargo.toml
.github/workflows/: ci.yml
vaultaris-sdk/: Cargo.toml  README.md  pyproject.toml
vaultaris-sdk-nodejs/: .gitignore  Cargo.toml  README.md  package.json
vaultaris-sdk-nodejs/examples/nest/: README.md  package.json  tsconfig.json
vaultaris-sdk-nodejs/examples/nest/src/: app.module.ts  main.ts  orders.controller.ts  vaultaris.module.ts
vaultaris-sdk-nodejs/examples/next/: README.md  middleware.ts  package.json  tsconfig.json
vaultaris-sdk-nodejs/examples/next/app/api/me/: route.ts
vaultaris-sdk-nodejs/examples/next/app/api/orders/: route.ts
vaultaris-sdk-nodejs/examples/next/lib/: vaultaris.ts
vaultaris-sdk-nodejs/src/: client.rs  dpop.rs  lib.rs
vaultaris-sdk-web/: .gitignore  README.md  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
vaultaris-sdk-web/__tests__/: client.test.ts  dpop.test.ts  key-store.test.ts  setup.ts
vaultaris-sdk-web/src/: base64url.ts  client.ts  dpop.ts  fingerprint.ts  index.ts  key-store.ts
vaultaris-sdk/examples/: actix_app.rs  axum_app.rs  axum_middleware.rs  basic.rs  basic_auth.rs  bootstrap_tenant.rs  middleware.rs  multi_tenant_admin.rs  python_usage.py  rbac_setup.rs  user_lifecycle.rs  webauthn_flow.rs
vaultaris-sdk/examples/python/: README.md  django_middleware.py  fastapi_app.py  flask_app.py  requirements.txt  vaultaris_client.py
vaultaris-sdk/src/: client.rs  config.rs  dpop.rs  error.rs  fingerprint.rs  lib.rs  oauth.rs  python.rs  types.rs  webauthn.rs  workflows.rs
vaultaris-sdk/src/client/: api_keys.rs  applications.rs  audit.rs  auth.rs  devices.rs  groups.rs  identity_providers.rs  integration.rs  keys.rs  mfa.rs  oauth_clients.rs  oauth_tokens.rs  permissions.rs  policies.rs  roles.rs  sessions.rs  setup.rs  statistics.rs  templates.rs  tenants.rs  transport.rs  users.rs
vaultaris-sdk/tests/: dpop_integration.rs
