[workspace]
members = [
    "vaultaris-sdk",
    "vaultaris-sdk-nodejs",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full", "macros", "rt-multi-thread"] }
# UUID
uuid = { version = "1.19", features = ["v4", "v7", "serde"] }
# Date/Time
chrono = { version = "0.4", features = ["serde"] }
# HTTP client
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
# Error handling
thiserror = "2"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
