[package]
name = "vaultaris-sdk-nodejs"
version = "0.1.0"
edition = "2024"
description = "Vaultaris SDK for Node.js - Native bindings using napi-rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RustLangES/vaultaris"
keywords = ["iam", "oauth2", "nodejs", "napi"]
categories = ["authentication", "api-bindings"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI-RS bindings
napi = { version = "3", features = ["async", "serde-json"] }
napi-derive = "3"

# Serialization
serde.workspace = true
serde_json.workspace = true

# UUID parsing — JS side passes IDs as strings; the Rust SDK takes Uuid.
uuid.workspace = true

# Wrap the canonical Rust SDK so we inherit endpoint routes, auth scheme,
# DPoP handling, and response envelope unwrapping for free.
vaultaris-sdk = { path = "../vaultaris-sdk", default-features = false, features = ["dpop", "async"] }

[build-dependencies]
napi-build = "2"
