[package]
name = "vaultaris-sdk"
version = "0.1.0"
edition = "2024"
description = "Vaultaris SDK - Client library for integrating with Vaultaris IAM"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RustLangES/vaultaris"
keywords = ["iam", "oauth2", "oidc", "authentication", "sdk"]
categories = ["authentication", "web-programming"]
readme = "README.md"

[features]
default = ["async", "dpop"]
async = ["tokio", "reqwest"]
blocking = ["reqwest/blocking"]
python = ["pyo3", "dpop"]
# DPoP — sender-constrained access tokens (RFC 9449). When enabled, the
# client can hold a private key and automatically attach a DPoP proof to
# every request. Pulls in `p256` for ES256 signing.
dpop = ["dep:p256", "dep:hex"]

[dependencies]
# HTTP client
reqwest = { workspace = true, optional = true }

# Async runtime
tokio = { workspace = true, optional = true }

# Serialization
serde.workspace = true
serde_json.workspace = true

# UUID
uuid.workspace = true

# Date/Time
chrono.workspace = true

# Error handling
thiserror.workspace = true

# URL handling
url = "2.5"
urlencoding = "2.1"

# PKCE / crypto
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"

# ES256 signing for DPoP proofs (optional, gated behind the `dpop` feature)
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"], optional = true }
hex = { version = "0.4", optional = true }

# Python bindings (optional)
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }

[dev-dependencies]
axum = { version = "0.8", features = ["macros", "json", "query"] }
tokio = { version = "1.48", features = ["full", "macros"] }
wiremock = "0.6"
sha2 = "0.10"
base64 = "0.22"
serde_json = "1"
